--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </nav>
     </header>
     <aside>
-      <h2>Ingredients</h2>
+      <h2 id="ingredients">Ingredients</h2>
       <ul>
         <li>Long Grain Rice</li>
         <li>Water</li>
@@ -34,8 +34,9 @@
     <h1>Chicken Fried Rice</h1>
     <h2>How to make Chicken Fried Rice</h2>
 
-    <h2>Description</h2>
+    <h2 id="description">Description</h2>
     <p>Fried rice is a dish of cooked rice that has been stir-fried in a wok or a frying pan and is usually mixed with other ingredients such as eggs, vegetables, seafood, or meat. It is often eaten by itself or as an accompaniment to another dish. Fried rice is a popular component of East, Southeast and certain South Asian cuisines. </p>
+
 
 
     <figure>
@@ -49,7 +50,7 @@
 
 
 
-  <h2>Directions</h2>
+  <h2 id="directions">Directions</h2>
   <ol>
     <li>Add rice, salt, and water to a pot, stir once, and bring to a boil over high heat. Reduce heat to low and cover. Allow to cook, untouched, for 40 minutes or until tender and liquid is absorbed. Remove from heat and let stand for 5 minutes, covered.</li>
     <li>Refrigerate rice until cold, preferably overnight.</li>
