--- a/index.html
+++ b/index.html
@@ -1,8 +1,23 @@
 <!DOCTYPE html>
+
 <html>
   <head>
-    <meta charset="utf-8">
     <title>Mallik Begur Recipe</title>
+    <meta name="description" content="The best recipe for Chicken Fried Rice">
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="css_reset.css" type="text/css">
+    <script src="external_javascript.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="css_syntax.css" type="text/css">
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-12345678-9', 'auto');
+  ga('send', 'pageview');
+
+</script>
   </head>
   <body>
     <header>
@@ -58,8 +73,8 @@
     <li>Push rice to one side and add beaten eggs to the other side, scramble quickly then toss in with the rice mixture. Stir in the soy sauce and sesame oil.</li>
     <li>Remove from the heat and toss in the scallions, if using. Enjoy!</li>
   </section>
-  <section>
-    <form action="/reviews" method="post">
+  <section id="reviews">
+    <form id="review-form" action="/review" method="post">
       <label for="name">Name</label>
       <input id="name" type="text" name="name">
       <label for="rating">Rating</label>
@@ -80,7 +95,7 @@
       </select>
 
       <label>Review
-        <textarea name="review" rows="6" cols="80"></textarea>
+        <textarea id="review" name="review" rows="6" cols="80"></textarea>
       </label>
       <input type="submit" value="Submit Review">
     </form>
