--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Mallik Begur Recipe</title>
     <meta name="description" content="The best recipe for Chicken Fried Rice">
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css_reset.css" type="text/css">
+    <link rel="stylesheet" href="css_custom_reset.css" type="text/css">
     <script src="external_javascript.js" type="text/javascript"></script>
     <link rel="stylesheet" href="css_syntax.css" type="text/css">
     <script>
@@ -32,7 +32,7 @@
     </header>
     <aside>
       <h2 id="ingredients">Ingredients</h2>
-      <ul>
+      <ul class="ingredients-list">
         <li>Long Grain Rice</li>
         <li>Water</li>
         <li>Salt</li>
@@ -72,6 +72,7 @@
     <li>Add olive oil to a large nonstick skillet or wok. Over medium heat add chicken, onions, bell pepper, and ginger and cook for about 4 to 5 minutes, until onions are translucent and chicken is mostly cooked through. Add cooked rice and water and increase heat to medium-high.</li>
     <li>Push rice to one side and add beaten eggs to the other side, scramble quickly then toss in with the rice mixture. Stir in the soy sauce and sesame oil.</li>
     <li>Remove from the heat and toss in the scallions, if using. Enjoy!</li>
+  </ol>
   </section>
   <section id="reviews">
     <form id="review-form" action="/review" method="post">
