--- a/index.html
+++ b/index.html
@@ -74,17 +74,17 @@
     <li>Remove from the heat and toss in the scallions, if using. Enjoy!</li>
   </ol>
   </section>
-  <section id="reviews">
+  <section class="review-form" id="reviews">
     <form id="review-form" action="/review" method="post">
       <label for="name">Name</label>
       <input id="name" type="text" name="name">
-      <label for="rating">Rating</label>
+      <!-- <label for="rating">Rating</label> -->
       <input type="radio" name="rating" value="1" checked = true>1
       <input type="radio" name="rating" value="2">2
       <input type="radio" name="rating" value="3">3
       <input type="radio" name="rating" value="4">4
       <input type="radio" name="rating" value="5">5
-      <label for="cooking expertise">Cooking Expertise</label>
+      <!-- <label for="cooking expertise">Cooking Expertise</label> -->
 
       <select id="expertise" name="expertise">
 
